--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,29 +1,47 @@
 // Required
-@import "~bootstrap/scss/functions";
-@import "~bootstrap/scss/variables";
-@import "~bootstrap/scss/mixins";
-@import "./vars";
-
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins';
+@import './vars';
 // Optional
-@import "~bootstrap/scss/reboot";
-@import "~bootstrap/scss/grid";
-
+@import '~bootstrap/scss/reboot';
+@import '~bootstrap/scss/grid';
 body {
-  background-color: $bg-color;
-  font-family: 'PT Serif';
-  color: $black-color;
+	background-color: $bg-color;
+	font-family: 'PT Serif';
+    color: $black-color;
+    overflow-x: hidden;
 }
 
 p {
-  font-size: $base-font-size;
-  margin-bottom: 30px;
+	font-size: $base-font-size;
+	margin-bottom: 30px;
 }
 
-h2{
-  font-size: $header-font-size;
-  font-family: 'DIN Condensed';
+h2 {
+	font-size: $header-font-size;
+	font-family: 'DIN Condensed';
+	line-height: 1.2;
 }
 
-.youtube-iframe{
-    margin-bottom: 20px;
-  }
+.youtube-iframe {
+	margin-bottom: 20px;
+}
+
+.song-section {
+	position: relative;
+	.video-section {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		i {
+			display: block;
+			font-size: $base-font-size;
+			max-width: 250px;
+			margin-bottom: 20px;
+		}
+	}
+	.image {
+		position: absolute;
+	}
+}
