--- a/src/components/song-section-1/index.scss
+++ b/src/components/song-section-1/index.scss
@@ -10,8 +10,10 @@
     position: absolute;
     right: 0;
     width: 600px;
-    text-align: center;
     .image-caption {
+      position: absolute;
+      right: 0;
+      bottom: 150px;
       width: 225px;
     }
   }
