--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,8 @@ body {
 	background-color: $bg-color;
 	font-family: 'PT Serif';
     color: $black-color;
-    overflow-x: hidden;
+	overflow-x: hidden;
+	padding-top: 85px;
 }
 
 p {
