add new images, update styles & image position

--- a/src/components/player/index.scss
+++ b/src/components/player/index.scss
@@ -40,6 +40,8 @@
 		-webkit-appearance: none;
 		margin: 0 30px;
 		min-width: 60px;
+		height: 40px;
+		background: transparent;
 		padding: 0;
 
 		&:focus {
