--- a/src/components/song-section-5/index.scss
+++ b/src/components/song-section-5/index.scss
@@ -2,11 +2,8 @@
     .image-wrapper{
         position: absolute;
         top: 0;
-        right: 0;
+        right: 200px;
         display: flex;
         flex-direction: column;
-        img{
-            position: unset;
-        }
     }
 }
