--- a/src/components/banner-section/index.scss
+++ b/src/components/banner-section/index.scss
@@ -1,26 +1,41 @@
 @import '../../styles/vars';
 
 .banner-section {
-  position: relative;
-  padding: 60px 0 80px;
-  background-size: 100px;
-  background-repeat: repeat-x;
-  background-position: 0 bottom;
-  background-image: url("data:image/svg+xml,%3C!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In --%3E%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='103px' height='244.1px' viewBox='0 0 103 244.1' style='enable-background:new 0 0 103 244.1;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:url(%23SVGID_1_);%7D .st1%7Bfill:url(%23SVGID_2_);%7D%0A%3C/style%3E%3Cdefs%3E%3C/defs%3E%3ClinearGradient id='SVGID_1_' gradientUnits='userSpaceOnUse' x1='51.5' y1='248.0001' x2='51.5' y2='-9.094947e-13'%3E%3Cstop offset='0' style='stop-color:%23FFFFFF'/%3E%3Cstop offset='1' style='stop-color:%23ffffff0a'/%3E%3C/linearGradient%3E%3Cpath class='st0' d='M0,0v183.6c25.7,0.1,25.5,60.5,51.2,60.5c25.7,0.1,25.9-60.3,51.6-60.2c0.1,0,0.1,0,0.2,0V0H0z'/%3E%3C/svg%3E%0A");
-  margin-bottom: 120px;
-  .logo {
-    position: relative;
-    font-family: "DIN Condensed";
+	position: relative;
+	padding: 60px 0 80px;
+	background-size: 100px;
+	background-repeat: repeat-x;
+	background-position: 0 bottom;
+	background-image: url("data:image/svg+xml,%3C!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In --%3E%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='103px' height='244.1px' viewBox='0 0 103 244.1' style='enable-background:new 0 0 103 244.1;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:url(%23SVGID_1_);%7D .st1%7Bfill:url(%23SVGID_2_);%7D%0A%3C/style%3E%3Cdefs%3E%3C/defs%3E%3ClinearGradient id='SVGID_1_' gradientUnits='userSpaceOnUse' x1='51.5' y1='248.0001' x2='51.5' y2='-9.094947e-13'%3E%3Cstop offset='0' style='stop-color:%23FFFFFF'/%3E%3Cstop offset='1' style='stop-color:%23ffffff0a'/%3E%3C/linearGradient%3E%3Cpath class='st0' d='M0,0v183.6c25.7,0.1,25.5,60.5,51.2,60.5c25.7,0.1,25.9-60.3,51.6-60.2c0.1,0,0.1,0,0.2,0V0H0z'/%3E%3C/svg%3E%0A");
+	margin-bottom: 120px;
 
-    top: -20px;
-    font-size: $logo-font-size;
-    color: $was-color;
-  }
-  .earphone {
-    position: absolute;
-    right: 0;
-  }
-  u{
-    white-space: nowrap;
-  }
+	@include media-breakpoint-down(sm) {
+		padding-bottom: 250px;
+		.image-wrapper{
+			position: absolute;
+			width: 100%;
+			bottom: 30%;
+			left: 25%;
+		}
+	}
+
+	.logo {
+		position: relative;
+		font-family: "DIN";
+		top: -30px;
+		font-size: $logo-font-size;
+		color: $was-color;
+		@include media-breakpoint-down(sm) {
+			font-size: $logo-font-size-sm;
+		}
+	}
+
+	.earphone {
+		position: absolute;
+		right: 0;
+	}
+
+	u {
+		white-space: nowrap;
+	}
 }
