--- a/src/components/song-section-1/index.scss
+++ b/src/components/song-section-1/index.scss
@@ -1,23 +1,37 @@
+@import '../../styles/vars';
+
 .song-section1 {
-  position: relative;
-  .poem {
-    margin: 40px 70px 80px;
-  }
-  .image-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: absolute;
-    right: 0;
-    width: 600px;
-    .image-caption {
-      position: absolute;
-      right: 0;
-      bottom: 150px;
-      width: 225px;
-    }
-  }
-  .youtube-iframe{
-    margin-bottom: 20px;
-  }
+	position: relative;
+
+
+	.poem {
+		margin: 40px 70px 80px;
+	}
+
+	.image-wrapper {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		position: absolute;
+		right: 0;
+		width: 600px;
+		z-index: -1;
+	}
+
+	.youtube-iframe {
+		margin-bottom: 20px;
+	}
+
+	@include media-breakpoint-down(sm) {
+		.image-wrapper {
+			position: absolute;
+			right: -50%;
+		}
+		.sapho{
+			width: 320px;
+		}
+		.poem {
+			margin: 40px 30px 80px;
+		}
+	}
 }
