--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,18 +1,15 @@
-// Required
-@import '~bootstrap/scss/functions';
-@import '~bootstrap/scss/variables';
-@import '~bootstrap/scss/mixins';
 @import './vars';
-// Optional
-@import '~bootstrap/scss/reboot';
-@import '~bootstrap/scss/utilities';
-@import '~bootstrap/scss/grid';
+@import './bootstrap';
+@import './fonts';
 body {
 	background-color: $bg-color;
-	font-family: 'PT Serif';
+	font-family: 'PT Serif', serif;
     color: $black-color;
 	overflow-x: hidden;
 	padding-top: 85px;
+	#gatsby-focus-wrapper{
+		overflow-x: hidden;
+	}
 }
 
 p {
@@ -22,8 +19,13 @@ p {
 
 h2 {
 	font-size: $header-font-size;
-	font-family: 'DIN Condensed';
+	font-family: 'DIN-L';
 	line-height: 1.2;
+	font-weight: normal;
+	text-transform: uppercase;
+	@include media-breakpoint-down(md) {
+		font-size: $header-font-size-sm;
+	}
 }
 
 .youtube-iframe {
@@ -32,6 +34,7 @@ h2 {
 
 .song-section {
 	position: relative;
+	margin-bottom: 100px;
 	.video-section {
 		display: flex;
 		flex-direction: column;
@@ -54,7 +57,7 @@ h2 {
 
 .song-index{
 	position: absolute;
-	top: 10px;
+	top: 35px;
 	left: 0;
 	font-family: 'DIN Condensed';
 	transform: translateX(-100%);
@@ -65,4 +68,14 @@ h2 {
 [disabled]{
 	color: $gray-color;
 	fill: $gray-color;
+}
+
+@include media-breakpoint-down(sm) {
+	.video-section {
+		align-items: center;
+	}
+	.song-index {
+		top: -30px;
+		left: 20px;
+	}
 }
