--- a/src/components/song-section-1/index.scss
+++ b/src/components/song-section-1/index.scss
@@ -22,6 +22,10 @@
 		margin-bottom: 20px;
 	}
 
+	.star{
+		animation: rotating linear 8s infinite;
+	}
+
 	@include media-breakpoint-down(sm) {
 		.image-wrapper {
 			position: absolute;
@@ -33,5 +37,14 @@
 		.poem {
 			margin: 40px 30px 80px;
 		}
+	}
+}
+
+@keyframes rotating {
+	from{
+		transform: rotate(0turn);
+	}
+	to{
+		transform: rotate(1turn);
 	}
 }
