--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -15,3 +15,13 @@ $player-color: #F4DDDB;
 $shadow-color: #DBBFBD;
 $gray-color: #BABABA;
 $index-color: #A30000;
+
+$wave: url("data:image/svg+xml,%3C!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In --%3E%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='103px' height='244px' viewBox='0 0 103 244.1' style='enable-background:new 0 0 103 244;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:url(%23SVGID_1_);%7D .st1%7Bfill:url(%23SVGID_2_);%7D%0A%3C/style%3E%3Cdefs%3E%3C/defs%3E%3ClinearGradient id='SVGID_1_' gradientUnits='userSpaceOnUse' x1='51.5' y1='248.0001' x2='51.5' y2='-9.094947e-13'%3E%3Cstop offset='0' style='stop-color:%23FFFFFF'/%3E%3Cstop offset='1' style='stop-color:%23ffffff0a'/%3E%3C/linearGradient%3E%3Cpath class='st0' d='M0,0v183.6c25.7,0.1,25.5,60.5,51.2,60.5c25.7,0.1,25.9-60.3,51.6-60.2c0.1,0,0.1,0,0.2,0V0H0z'/%3E%3C/svg%3E%0A");
+$wave2: url("data:image/svg+xml,%3C!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In --%3E%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' width='102.8px' height='244.1px' viewBox='0 0 102.8 244.1' style='enable-background:new 0 0 102.8 244.1;' xml:space='preserve'%3E%3Cstyle type='text/css'%3E .st0%7Bfill:url(%23SVGID_1_);%7D .st1%7Bfill:url(%23SVGID_2_);%7D%0A%3C/style%3E%3Cdefs%3E%3C/defs%3E%3ClinearGradient id='SVGID_1_' gradientUnits='userSpaceOnUse' x1='51.3895' y1='-3.9058' x2='51.3895' y2='244.094'%3E%3Cstop offset='0' style='stop-color:%23F0F0F0'/%3E%3Cstop offset='1' style='stop-color:%23F9F9F9;stop-opacity:1.000000e-02'/%3E%3C/linearGradient%3E%3Cpath class='st0' d='M51.2,0C25.5,0.1,25.7,60.5,0,60.5v183.6h102.8V60.2C77.1,60.3,76.9-0.1,51.2,0z'/%3E%3C/svg%3E%0A");
+
+
+@mixin bg($bg){
+	background-size: 100px;
+	background-repeat: repeat-x;
+	background-image: $bg;
+}
