--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,13 @@ body {
 	}
 }
 
+button{
+	font-family: 'PT Serif', serif;
+	&:hover{
+		filter: invert(1);
+	}
+}
+
 p {
 	font-size: $base-font-size;
 	margin-bottom: 30px;
