--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,6 +24,10 @@ p {
 	margin-bottom: 30px;
 }
 
+a{
+	color: $black-color;
+}
+
 h2 {
 	font-size: $header-font-size;
 	font-family: 'DIN-L';
@@ -42,6 +46,18 @@ h2 {
 .song-section {
 	position: relative;
 	margin-bottom: 100px;
+
+	.poem {
+		margin: 40px 70px 80px;
+
+		@include media-breakpoint-down(sm) {
+
+			.poem {
+				margin: 40px 30px 80px;
+			}
+		}
+	}
+
 	.video-section {
 		display: flex;
 		flex-direction: column;
