--- a/src/components/banner-section/index.scss
+++ b/src/components/banner-section/index.scss
@@ -8,7 +8,8 @@
 
 	@include bg($wave);
 	@include media-breakpoint-down(sm) {
-		padding-bottom: 250px;
+		padding: 80px 0 250px;
+
 		.image-wrapper{
 			position: absolute;
 			width: 100%;
@@ -24,6 +25,7 @@
 		top: -30px;
 		font-size: $logo-font-size;
 		color: $was-color;
+		margin: 0;
 		@include media-breakpoint-down(sm) {
 			font-size: $logo-font-size-sm;
 		}
