--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,7 @@ body {
 
 button{
 	font-family: 'PT Serif', serif;
+	font-size: $base-font-size;
 	&:hover{
 		filter: invert(1);
 	}
@@ -100,5 +101,14 @@ h2 {
 	.song-index {
 		top: -30px;
 		left: 20px;
+	}
+}
+
+@keyframes rotating {
+	from {
+		transform: rotate(0turn);
+	}
+	to {
+		transform: rotate(1turn);
 	}
 }
