--- a/src/components/song-section-6/index.scss
+++ b/src/components/song-section-6/index.scss
@@ -1,12 +1,14 @@
 @import '../../styles/vars';
 
 .song-section-6 {
+	.image{
+		z-index: -1;
+	}
 	@include media-breakpoint-down(sm) {
 		.image{
 			position: unset;
 			width: 100%;
 			margin-bottom: 40px;
-
 		}
 	}
 }
