--- a/src/components/song-section-5/index.scss
+++ b/src/components/song-section-5/index.scss
@@ -9,6 +9,13 @@
 		flex-direction: column;
 		align-items: center;
 	}
+	.image{
+		z-index: -1;
+	}
+
+	h2{
+		width: 75%;
+	}
 
 	@include media-breakpoint-down(sm) {
         .image-wrapper{
