--- a/src/components/song-section-6/index.scss
+++ b/src/components/song-section-6/index.scss
@@ -1,11 +1,16 @@
 @import '../../styles/vars';
 
 .song-section-6 {
+	h2{
+		width: 70%;
+	}
 	.image{
 		z-index: -1;
+		transform: scale(1.5);
 	}
 	@include media-breakpoint-down(sm) {
 		.image{
+			transform: scale(1);
 			position: unset;
 			width: 100%;
 			margin-bottom: 40px;
