--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -101,8 +101,8 @@ h2 {
 }
 
 .__react_component_tooltip.custom-tooltip {
-	width: 300px;
-	font-size: $base-font-size;
+	width: 200px;
+	font-size: 17px;
 	font-style: italic;
 }
 
